        - More use of constexpr throughout the calculation engine.
    ENGINE:
        Class BitManipulatorByType<...>:
            - This is now an internal class in the namespace regina::detail.
              You should never need to refer to this class directly; instead
              you can access its functionality through the end-user class
              BitManipulator<...>.
        Class Cut:
            - For the iterator-based constructor, the old recommendation that
              the iterator type be random access is now a hard requirement.
        Class Face<dim, subdim>, FaceNumbering<dim, subdim>, :
            - Major overhaul of the many classes to support face numbering.
              The new structure is simpler thanks to new features of modern
              C++ standards, and several of the old helper classes in
              regina::detail are now gone.
            - New class constant hasNumberingTables to indicate whether lookup
              tables are used for face numbering queries.
        Class FixedArray:
            - Now has a default constructor that creates an empty array.
        Class GroupExpressionTerm, GroupExpression, GroupPresentation,
                HomGroupPresentation:
            - Now uses size_t instead of unsigned long throughout for
              generator counts and generator indices.
            - The depth argument to GroupPresentation::proliferateRelators()
              is now of type int.
        Class Isomorphism<dim>:
            - The increment operators are now available in all dimensions
              (not just dimensions ≤ 6).
        Class Laurent<T>:
            - For the iterator-based constructor and init() routine, the
              iterator type is now required to be random access.
        Class LPCol<...>:
            - This is now an internal class in the namespace regina::detail,
              and its template parameters have changed.  End users should have